# flasx

./: Jenkinsfile  pyproject.toml
flasx/: main.py
flasx/core/: deps.py
flasx/models/: customer_model.py
flasx/schemas/: item_schema.py  receiver_schema.py
