[tool.poetry]
name = "flasx"
version = "0.1.0"
description = ""
authors = ["6510110632 <nydukkung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
pydantic = {extras = ["email"], version = "^2.11.7"}
fastapi-cli = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
